   use a lighter stemming approach, CatalanAnalyzer uses ElisionFilter 
   with a set of contractions, HindiAnalyzer uses StandardTokenizer, and
   ThaiAnalyzer uses thai stopwords. Add GermanNormalizationFilter which applies
   the Snowball German2 algorithm to ae/oe/ue and case-folds ß. Add 
   GalicianMinimalStemFilter for plural removal only. (Robert Muir)

Optimizations

* SOLR-2888: FSTSuggester refactoring: internal storage is now UTF-8, 
  external sorting (on disk) prevents OOMs even with large data sets
  (the bottleneck is now FST construction), code cleanups and API cleanups.
  You should use FSTCompletionLookup (the old FSTLookup impl is deprecated).
  (Dawid Weiss, Robert Muir)

Bug Fixes

 * LUCENE-3600: BlockJoinQuery now supports parent docs that have no
   children (such docs will never match, but BJQ was tripping an
   assert if such a parent doc was the first doc in the segment).
   (Shay Banon, Mike McCandless)
 * LUCENE-3609: Fix regression in BooleanFilter, introduced in Lucene 3.5,
   to correctly handle minShouldMatch behaviour of previous versions.
   (Shay Banon, Uwe Schindler)

 * LUCENE-3668: For a multi-token synonym mapping to a single token,
   SynonymFilter will now set the start offset of the synonym token to
   the start offset of the first matched token, and the end offset of
   the synonym token to the end offset of the last matched token.
   This way if the synonym token is used for highlighting, it will
   cover all tokens it had matched.  (Koji Sekiguchi, Robert Muir,
   Mike McCandless)

 * LUCENE-3742: When SynonymFilter has an output extending beyond the
   input tokens, it now sets the start and end offset to the same
   values for the last token (not 0, 0).  (Robert Muir, Mike
   McCandless)

 * LUCENE-3686: CategoryEnhancement must override Object.equals(Object).
   (Sivan Yogev via Shai Erera)

 * LUCENE-3697: SimpleBoundaryScanner does not work well when highlighting