@@ -22,15 +22,34 @@ import java.io.IOException;
 import org.apache.lucene.analysis.TokenFilter;
 import org.apache.lucene.analysis.TokenStream;
 import org.apache.lucene.analysis.tokenattributes.CharTermAttribute;
+import org.apache.lucene.util.Version;
 
 /**
  * TokenFilter that removes possessives (trailing 's) from words.
+ * <a name="version"/>
+ * <p>You must specify the required {@link Version}
+ * compatibility when creating EnglishPossessiveFilter:
+ * <ul>
+ *    <li> As of 3.6, U+2019 RIGHT SINGLE QUOTATION MARK and 
+ *         U+FF07 FULLWIDTH APOSTROPHE are also treated as
+ *         quotation marks.
+ * </ul>
  */
 public final class EnglishPossessiveFilter extends TokenFilter {
   private final CharTermAttribute termAtt = addAttribute(CharTermAttribute.class);
+  private Version matchVersion;
 
+  /**
+   * @deprecated Use {@link #EnglishPossessiveFilter(Version, TokenStream)} instead.
+   */
+  @Deprecated
   public EnglishPossessiveFilter(TokenStream input) {
+    this(Version.LUCENE_35, input);
+  }
+
+  public EnglishPossessiveFilter(Version version, TokenStream input) {
     super(input);
+    this.matchVersion = version;
   }
 
   @Override
@@ -42,10 +61,12 @@ public final class EnglishPossessiveFilter extends TokenFilter {
     final char[] buffer = termAtt.buffer();
     final int bufferLength = termAtt.length();
     
-    if (bufferLength >= 2 &&
-        buffer[bufferLength-2] == '\'' &&
-        (buffer[bufferLength-1] == 's' || buffer[bufferLength-1] == 'S'))
+    if (bufferLength >= 2 && 
+        (buffer[bufferLength-2] == '\'' || 
+         (matchVersion.onOrAfter(Version.LUCENE_36) && (buffer[bufferLength-2] == '\u2019' || buffer[bufferLength-2] == '\uFF07'))) &&
+        (buffer[bufferLength-1] == 's' || buffer[bufferLength-1] == 'S')) {
       termAtt.setLength(bufferLength - 2); // Strip last 2 characters off
+    }
 
     return true;
   }
